k8s/apps/tools/copyparty/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: copyparty
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: copyparty
  namespace: copyparty
spec:
  replicas: 1
  selector:
    matchLabels:
      app: copyparty
  template:
    metadata:
      labels:
        app: copyparty
    spec:
      securityContext:
        runAsUser: 100000
        runAsGroup: 100000
      containers:
        - name: copyparty
          image: copyparty/ac:1.20.13@sha256:a998d481993a41786c48d5514d2ebf91764311cdcd86118d077818c20b81d788
          ports:
            - containerPort: 3939
          volumeMounts:
            - name: cfg
              mountPath: /cfg
            - name: config
              mountPath: /cfg/copyparty.conf
              subPath: copyparty.conf
            - name: audiobooks
              mountPath: /mnt/audiobooks
            - name: backups
              mountPath: /mnt/backups
            - name: documents
              mountPath: /mnt/documents
            - name: drive
              mountPath: /mnt/drive
            - name: media
              mountPath: /mnt/media
            - name: photos
              mountPath: /mnt/photos
            - name: podcasts
              mountPath: /mnt/podcasts
            - name: restic
              mountPath: /mnt/restic
            - name: appdata
              mountPath: /mnt/appdata
      volumes:
        - name: cfg
          persistentVolumeClaim:
            claimName: copyparty-cfg
        - name: config
          configMap:
            name: copyparty-config
        - name: audiobooks
          persistentVolumeClaim:
            claimName: copyparty-audiobooks
        - name: backups
          persistentVolumeClaim:
            claimName: copyparty-backups
        - name: documents
          persistentVolumeClaim:
            claimName: copyparty-documents
        - name: drive
          persistentVolumeClaim:
            claimName: copyparty-drive
        - name: media
          persistentVolumeClaim:
            claimName: copyparty-media
        - name: photos
          persistentVolumeClaim:
            claimName: copyparty-photos
        - name: podcasts
          persistentVolumeClaim:
            claimName: copyparty-podcasts
        - name: restic
          persistentVolumeClaim:
            claimName: copyparty-restic
        - name: appdata
          persistentVolumeClaim:
            claimName: copyparty-appdata
---
apiVersion: v1
kind: Service
metadata:
  name: copyparty
  namespace: copyparty
  annotations:
    gatus.home-operations.com/endpoint: |
      alerts:
        - type: pushover
spec:
  selector:
    app: copyparty
  ports:
    - port: 3939
      targetPort: 3939
